[tool.poetry]
name = "connector_nats"
version = "0.1.0"
description = "Publish messages to NATS through a SpiffWorkflow Service Task"
authors = ["Pit Wegner <pit.wegner@gmail.com>"]
readme = "README.md"
packages = [{include = "connector_nats", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
nats-py = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
